[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Internet Browser.JPG" type="Texture" id=1]
[ext_resource path="res://Scripts/Internet.gd" type="Script" id=2]
[ext_resource path="res://Assets/mouse.png" type="Texture" id=3]
[ext_resource path="res://Assets/scr.png" type="Texture" id=4]
[ext_resource path="res://Assets/lmb.png" type="Texture" id=5]
[ext_resource path="res://Assets/rmb.png" type="Texture" id=6]
[ext_resource path="res://Assets/Arrow.PNG" type="Texture" id=7]
[ext_resource path="res://Assets/Bookmark Guide.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Casa-Bossa-Nova.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Cats.JPG" type="Texture" id=10]
[ext_resource path="res://Assets/Info.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/XToLeave.PNG" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.5, 36 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 188, 34.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 35.5, 30 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 37, 21.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0
height = 36.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 29.5 )

[node name="Internet" type="Node2D"]
script = ExtResource( 2 )

[node name="HomePage" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="HomePage"]
position = Vector2( 480, 360 )
texture = ExtResource( 1 )

[node name="BlankBookmark" type="KinematicBody2D" parent="HomePage"]
collision_layer = 4095
collision_mask = 4095

[node name="BlankBookmark" type="CollisionShape2D" parent="HomePage/BlankBookmark"]
position = Vector2( 447.5, 90 )
shape = SubResource( 1 )

[node name="CatPicturesBookmark" type="KinematicBody2D" parent="HomePage"]

[node name="CatPicturesBookmark" type="CollisionShape2D" parent="HomePage/CatPicturesBookmark"]
position = Vector2( 743, 89.5 )
shape = SubResource( 2 )

[node name="HomeGuides" type="Node" parent="HomePage"]

[node name="Bookmarks" type="Node2D" parent="HomePage/HomeGuides"]

[node name="BookmarksWords" type="Sprite" parent="HomePage/HomeGuides/Bookmarks"]
position = Vector2( 787, 450 )
scale = Vector2( 0.575, 0.606944 )
texture = ExtResource( 8 )

[node name="BookmarksArrow" type="Sprite" parent="HomePage/HomeGuides/Bookmarks"]
position = Vector2( 788, 187 )
rotation = -1.90764
scale = Vector2( 0.34375, 0.486111 )
texture = ExtResource( 7 )

[node name="Exit" type="Node2D" parent="HomePage/HomeGuides"]

[node name="ExitText" type="Sprite" parent="HomePage/HomeGuides/Exit"]
position = Vector2( 506, 542 )
scale = Vector2( 0.513542, 0.484722 )
z_as_relative = false
texture = ExtResource( 12 )

[node name="Search" type="KinematicBody2D" parent="HomePage"]

[node name="Search" type="CollisionShape2D" parent="HomePage/Search"]
position = Vector2( 669.5, 338 )
shape = SubResource( 5 )

[node name="SearchBar" type="TextEdit" parent="HomePage"]
anchor_left = 0.268
anchor_top = 0.432
anchor_right = 0.656
anchor_bottom = 0.521
margin_left = -2.28
margin_top = 0.959991
margin_right = 2.23999
margin_bottom = -0.120026

[node name="LeaveLesson" type="KinematicBody2D" parent="HomePage"]

[node name="Leave" type="CollisionShape2D" parent="HomePage/LeaveLesson"]
position = Vector2( 922, 22.5 )
shape = SubResource( 6 )

[node name="Mouse" type="KinematicBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 10
z_as_relative = false
collision_layer = 4095

[node name="open" type="Sprite" parent="Mouse"]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="left" type="Sprite" parent="Mouse"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="right" type="Sprite" parent="Mouse"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="scroll" type="Sprite" parent="Mouse"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="clickzone" type="Area2D" parent="Mouse"]
collision_layer = 15
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/clickzone"]
position = Vector2( 0, -7 )
shape = SubResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CatPicturesSite" type="Node" parent="."]

[node name="Close" type="KinematicBody2D" parent="CatPicturesSite"]
collision_layer = 4095

[node name="Collider" type="CollisionShape2D" parent="CatPicturesSite/Close"]
position = Vector2( 928, 180.5 )
z_index = 2
z_as_relative = false
shape = SubResource( 4 )

[node name="Body" type="Sprite" parent="CatPicturesSite"]
position = Vector2( 480, 435 )
texture = ExtResource( 10 )

[node name="Info" type="Node" parent="."]

[node name="Close" type="KinematicBody2D" parent="Info"]
collision_layer = 4095

[node name="Collider" type="CollisionShape2D" parent="Info/Close"]
position = Vector2( 928, 180.5 )
z_index = 2
z_as_relative = false
shape = SubResource( 4 )

[node name="Body" type="Sprite" parent="Info"]
position = Vector2( 480, 435 )
texture = ExtResource( 11 )
